<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginActivitySignUpButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_color_background"
            android:layout_margin="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@color/secondary_color"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginActivityEditTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:background="@drawable/primary_color_background"
                android:ems="10"
                android:layout_margin="16dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/loginActivityEditTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/primary_color_background"
                android:ems="10"
                android:layout_margin="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:textSize="24sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginActivityLoginButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_color_background"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:backgroundTint="@color/secondary_color" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

</ScrollView>
