<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.eventwise.screens.usersearch.UserSearchViewModel" />
    </data>

    <ScrollView
        android:id="@+id/userSearchActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/primary_color_scale1"
        tools:context=".screens.usersearch.UserSearchActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_xlarge"
                android:layout_marginVertical="@dimen/margin_small"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userSearchActivityUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:background="@drawable/text_field_background"
                    android:layout_margin="@dimen/margin_medium"
                    android:inputType="text"
                    android:text="@={viewModel.usernameSearch}"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/form_text_field_padding_horizontal"
                    android:paddingTop="@dimen/form_text_field_padding_vertical"
                    android:textSize="@dimen/text_size_large" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/userSearchActivitySearchPeopleButton"
                android:layout_width="@dimen/form_button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:text="@string/search_people"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                app:backgroundTint="@color/secondary_color_scale1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/userSearchActivityFoundedPeopleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginVertical="@dimen/margin_xlarge"
                android:background="@drawable/cardview_border_background"
                android:backgroundTint="@color/primary_color_scale3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/founded_people"
                        android:textColor="@color/black"
                        android:background="@drawable/text_field_purple_background"
                        android:paddingVertical="@dimen/margin_large"
                        android:paddingHorizontal="@dimen/margin_medium"
                        android:textSize="@dimen/text_size_xlarge"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        app:cardCornerRadius="10dp"
                        android:layout_marginVertical="@dimen/margin_medium"
                        android:backgroundTint="@color/primary_color_scale4">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:paddingVertical="@dimen/margin_medium"
                            android:paddingHorizontal="@dimen/margin_medium"
                            android:textSize="@dimen/text_size_xlarge"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/activityUserSearchAddRemoveButton"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_background_more_radius"
                            android:layout_gravity="end"
                            android:text="@string/add_to_group"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_medium"
                            app:backgroundTint="@color/secondary_color_scale2" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>
</layout>
